test: Repurpose legacy tests to upgrade to last upstream packages
These tests originally intended to verify the upgrade path from v3 and
broken v4 packages (long story...) to the freshly built in each
pipeline.

However as we sunset Debian 11 we won't anymore build pacakges for this
distribution and the original purpose cannot be achieved anymore.

Instead of removing them, repurpose them to verify that at least we can
upgrade to the last time we updated Debian 11 packages upstream. It was
limited value in CI, but at least we will eventually catch when this
breaks.

Ticket: MEN-8836

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -471,12 +471,10 @@ test:install-script:trixie:
     DEBIAN_VERSION_NAME: "trixie"
 
 # Legacy tests specific for Debian 11
+# Note that it does not verify built packages (because we don't build anymore for Debian 11)
 test:install-script:legacy:
   extends: .test:install-script
-  needs:
-    - "build:pkgs:device-components: [crosscompile, debian, bullseye, amd64]"
-    - "build:pkgs:device-components: [crosscompile, debian, bullseye, armhf]"
-    - "build:pkgs:workstation-tools: [crosscompile, debian, bullseye, amd64]"
+  needs: []
   script:
     - cd scripts/tests
     - python3 -m pytest -v --junit-xml results.xml test_install_mender_sh_legacy.py
