--- a/recipes/mender-client4/debian-master/control
+++ b/recipes/mender-client4/debian-master/control
@@ -19,7 +19,7 @@ Package: mender-update
 Conflicts: mender, mender-client
 Architecture: any
 Depends: mender-auth, ${shlibs:Depends}, ${misc:Depends}
-Recommends: mender-flash, mender-setup
+Recommends: mender-flash, mender-setup, mender-client-version-inventory-script
 Description: Mender update
  Mender-update is an open source over-the-air (OTA) software updater for embedded Linux devices.
 
