--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -389,6 +389,8 @@ test:check-python3-formatting:
       --mender-flash-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-flash-deb-version)
       --mender-container-modules-version $MENDER_CONTAINER_MODULES_VERSION
       --mender-container-modules-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-container-modules-deb-version)
+      --mender-client-version-inventory-script-version $MENDER_CLIENT_VERSION_INVENTORY_SCRIPT_VERSION
+      --mender-client-version-inventory-script-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-client-version-inventory-script-deb-version)
       ${commercial_tests_flags}
       --junit-xml results.xml
   artifacts:
