--- a/recipes/mender-connect/debian-master/control
+++ b/recipes/mender-connect/debian-master/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-connect
 Architecture: any
-Depends: dbus, mender-auth | mender-client (>3.2.0), ${shlibs:Depends}, ${misc:Depends}
+Depends: dbus, mender-auth | mender-client (>>3.2.0), ${shlibs:Depends}, ${misc:Depends}
 Description: Mender Connect
  Mender Connect is a Mender add-on which enhances the Mender Client providing a bidirectional
  communication channel with the server. It supports the following troubleshooting features:
