chore: Remove leftovers from `simulated` builds
We removed the actual functionality some time ago. Removing it for
simplification of user scripts. See 9c13410.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,23 +102,19 @@ include:
 .mender-dist-packages-image-matrix-cross:
   parallel:
     matrix:
-      - BUILD: crosscompile
-        DISTRO: debian
+      - DISTRO: debian
         RELEASE: [bookworm, trixie]
         ARCH: [amd64, armhf, arm64]
-      - BUILD: crosscompile
-        DISTRO: ubuntu
+      - DISTRO: ubuntu
         RELEASE: [jammy, noble]
         ARCH: [amd64, armhf, arm64]
 .mender-dist-packages-workstation_tools-image-matrix-cross:
   parallel:
     matrix:
-      - BUILD: crosscompile
-        DISTRO: debian
+      - DISTRO: debian
         RELEASE: [bookworm, trixie]
         ARCH: [amd64, arm64]
-      - BUILD: crosscompile
-        DISTRO: ubuntu
+      - DISTRO: ubuntu
         RELEASE: [jammy, noble]
         ARCH: [amd64, arm64]
 
@@ -202,26 +198,25 @@ build:orig:all:
     - name: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/docker:26-dind
       alias: docker
   variables:
-    BUILD: "crosscompile"
     DISTRO: "debian"
     RELEASE: "bookworm"
     ARCH: "amd64"
   script:
     - apk --update --no-cache add bash
     - if [[ "${MENDER_VERSION}" =~ ^3\..* ]]; then
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION true
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION true
     - else
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client4 $MENDER_VERSION true
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-client4 $MENDER_VERSION true
     - fi
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-connect $MENDER_CONNECT_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-configure $MENDER_CONFIGURE_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-container-modules $MENDER_CONTAINER_MODULES_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-artifact $MENDER_ARTIFACT_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-cli $MENDER_CLI_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-setup $MENDER_SETUP_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-snapshot $MENDER_SNAPSHOT_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-flash $MENDER_FLASH_VERSION true
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client-version-inventory-script $MENDER_CLIENT_VERSION_INVENTORY_SCRIPT_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-connect $MENDER_CONNECT_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-configure $MENDER_CONFIGURE_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-container-modules $MENDER_CONTAINER_MODULES_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-artifact $MENDER_ARTIFACT_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-cli $MENDER_CLI_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-setup $MENDER_SETUP_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-snapshot $MENDER_SNAPSHOT_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-flash $MENDER_FLASH_VERSION true
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-client-version-inventory-script $MENDER_CLIENT_VERSION_INVENTORY_SCRIPT_VERSION true
     - find output -type f
   artifacts:
     paths:
@@ -245,22 +240,22 @@ build:pkgs:device-components:
   script:
     - apk --update --no-cache add bash
     - if [[ "${MENDER_VERSION}" =~ ^3\..* ]]; then
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION
     - else
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client4 $MENDER_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-client4 $MENDER_VERSION
     - fi
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-connect $MENDER_CONNECT_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-configure $MENDER_CONFIGURE_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-container-modules $MENDER_CONTAINER_MODULES_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-setup $MENDER_SETUP_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-snapshot $MENDER_SNAPSHOT_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-flash $MENDER_FLASH_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-client-version-inventory-script $MENDER_CLIENT_VERSION_INVENTORY_SCRIPT_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-connect $MENDER_CONNECT_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-configure $MENDER_CONFIGURE_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-container-modules $MENDER_CONTAINER_MODULES_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-setup $MENDER_SETUP_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-snapshot $MENDER_SNAPSHOT_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-flash $MENDER_FLASH_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-client-version-inventory-script $MENDER_CLIENT_VERSION_INVENTORY_SCRIPT_VERSION
     - if [ -n "${MENDER_PRIVATE_REPO_ACCESS_TOKEN}" ]; then
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-gateway $MENDER_GATEWAY_VERSION
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-monitor $MENDER_MONITOR_VERSION
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-orchestrator $MENDER_ORCHESTRATOR_VERSION
-    -   ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-orchestrator-support $MENDER_ORCHESTRATOR_SUPPORT_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-gateway $MENDER_GATEWAY_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-monitor $MENDER_MONITOR_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-orchestrator $MENDER_ORCHESTRATOR_VERSION
+    -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-orchestrator-support $MENDER_ORCHESTRATOR_SUPPORT_VERSION
     - fi
     - find output -type f
   artifacts:
@@ -286,8 +281,8 @@ build:pkgs:workstation-tools:
       alias: docker
   script:
     - apk --update --no-cache add bash
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-artifact $MENDER_ARTIFACT_VERSION
-    - ./docker-build-package $BUILD $DISTRO $RELEASE $ARCH mender-cli $MENDER_CLI_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-artifact $MENDER_ARTIFACT_VERSION
+    - ./docker-build-package $DISTRO $RELEASE $ARCH mender-cli $MENDER_CLI_VERSION
     - find output -type f
   artifacts:
     paths:
@@ -322,7 +317,7 @@ test:check-python3-formatting:
     #- mender-qa-worker-generic
     - hetzner-amd-beefy
   # Bellow will be overwritten in the final pipeline definition with something like
-  # "build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]"
+  # "build:pkgs:workstation-tools: [debian, trixie, amd64]"
   needs: []
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -420,8 +415,8 @@ test:check-python3-formatting:
 test:pkgs:device-components:bookworm:
   extends: .test:pkgs:device-components
   needs:
-    - "build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]"
-    - "build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]"
+    - "build:pkgs:device-components: [debian, bookworm, amd64]"
+    - "build:pkgs:device-components: [debian, bookworm, armhf]"
   variables:
     DEBIAN_VERSION: 12
     DEBIAN_VERSION_NAME: "bookworm"
@@ -429,8 +424,8 @@ test:pkgs:device-components:bookworm:
 test:pkgs:device-components:trixie:
   extends: .test:pkgs:device-components
   needs:
-    - "build:pkgs:device-components: [crosscompile, debian, trixie, amd64]"
-    - "build:pkgs:device-components: [crosscompile, debian, trixie, armhf]"
+    - "build:pkgs:device-components: [debian, trixie, amd64]"
+    - "build:pkgs:device-components: [debian, trixie, armhf]"
   variables:
     DEBIAN_VERSION: 13
     DEBIAN_VERSION_NAME: "trixie"
@@ -451,9 +446,9 @@ test:pkgs:device-components:trixie:
 test:install-script:bookworm:
   extends: .test:install-script
   needs:
-    - "build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]"
-    - "build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]"
-    - "build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]"
+    - "build:pkgs:device-components: [debian, bookworm, amd64]"
+    - "build:pkgs:device-components: [debian, bookworm, armhf]"
+    - "build:pkgs:workstation-tools: [debian, bookworm, amd64]"
   variables:
     DEBIAN_VERSION: 12
     DEBIAN_VERSION_NAME: "bookworm"
@@ -461,9 +456,9 @@ test:install-script:bookworm:
 test:install-script:trixie:
   extends: .test:install-script
   needs:
-    - "build:pkgs:device-components: [crosscompile, debian, trixie, amd64]"
-    - "build:pkgs:device-components: [crosscompile, debian, trixie, armhf]"
-    - "build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]"
+    - "build:pkgs:device-components: [debian, trixie, amd64]"
+    - "build:pkgs:device-components: [debian, trixie, armhf]"
+    - "build:pkgs:workstation-tools: [debian, trixie, amd64]"
   variables:
     DEBIAN_VERSION: 13
     DEBIAN_VERSION_NAME: "trixie"
@@ -490,7 +485,7 @@ test:install-script:legacy:
   tags:
     - hetzner-amd-beefy
   needs:
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, amd64]'
+    - 'build:pkgs:workstation-tools: [debian, amd64]'
   rules:
     - if: $CI_COMMIT_BRANCH == "production"
       when: never
@@ -512,7 +507,7 @@ test:pkgs:workstation-tools:bookworm:
     DEBIAN_VERSION: 12
     DEBIAN_VERSION_NAME: "bookworm"
   needs:
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]'
+    - 'build:pkgs:workstation-tools: [debian, bookworm, amd64]'
 
 test:pkgs:workstation-tools:trixie:
   extends: .test:pkgs:workstation-tools
@@ -520,7 +515,7 @@ test:pkgs:workstation-tools:trixie:
     DEBIAN_VERSION: 13
     DEBIAN_VERSION_NAME: "trixie"
   needs:
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]'
+    - 'build:pkgs:workstation-tools: [debian, trixie, amd64]'
 
 .publish_helper_functions: &publish_helper_functions |
   # Bash function to check if the string is a final tag
@@ -536,18 +531,18 @@ test:pkgs:workstation-tools:trixie:
 
 .template:publish:s3:device-components:
   dependencies:
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, amd64]'
+    - 'build:pkgs:device-components: [debian, bookworm, amd64]'
+    - 'build:pkgs:device-components: [debian, bookworm, arm64]'
+    - 'build:pkgs:device-components: [debian, bookworm, armhf]'
+    - 'build:pkgs:device-components: [debian, trixie, amd64]'
+    - 'build:pkgs:device-components: [debian, trixie, arm64]'
+    - 'build:pkgs:device-components: [debian, trixie, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, amd64]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, arm64]'
+    - 'build:pkgs:device-components: [ubuntu, noble, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, noble, arm64]'
+    - 'build:pkgs:device-components: [ubuntu, noble, amd64]'
   stage: publish
   image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:13
   tags:
@@ -573,14 +568,14 @@ publish:s3:device-components:automatic:
 
 .template:publish:s3:workstation_tools:
   dependencies:
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, arm64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, arm64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, jammy, amd64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, jammy, arm64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, noble, amd64]'
-    - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, noble, arm64]'
+    - 'build:pkgs:workstation-tools: [debian, bookworm, amd64]'
+    - 'build:pkgs:workstation-tools: [debian, bookworm, arm64]'
+    - 'build:pkgs:workstation-tools: [debian, trixie, amd64]'
+    - 'build:pkgs:workstation-tools: [debian, trixie, arm64]'
+    - 'build:pkgs:workstation-tools: [ubuntu, jammy, amd64]'
+    - 'build:pkgs:workstation-tools: [ubuntu, jammy, arm64]'
+    - 'build:pkgs:workstation-tools: [ubuntu, noble, amd64]'
+    - 'build:pkgs:workstation-tools: [ubuntu, noble, arm64]'
   stage: publish
   image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:13
   tags:
@@ -635,18 +630,18 @@ publish:production:s3:scripts:install-mender-sh:
 
 .template:publish:s3:
   dependencies:
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, debian, trixie, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, amd64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, armhf]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, arm64]'
-    - 'build:pkgs:device-components: [crosscompile, ubuntu, noble, amd64]'
+    - 'build:pkgs:device-components: [debian, bookworm, amd64]'
+    - 'build:pkgs:device-components: [debian, bookworm, arm64]'
+    - 'build:pkgs:device-components: [debian, bookworm, armhf]'
+    - 'build:pkgs:device-components: [debian, trixie, amd64]'
+    - 'build:pkgs:device-components: [debian, trixie, arm64]'
+    - 'build:pkgs:device-components: [debian, trixie, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, amd64]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, jammy, arm64]'
+    - 'build:pkgs:device-components: [ubuntu, noble, armhf]'
+    - 'build:pkgs:device-components: [ubuntu, noble, arm64]'
+    - 'build:pkgs:device-components: [ubuntu, noble, amd64]'
   stage: publish
   image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:13
   before_script:
