chore: Remove `shlibs:Depends`
Clears build warning:
`dpkg-gencontrol: warning: Depends field of package
mender-client-version-inventory-script: substitution variable
${shlibs:Depends} used, but is not defined`

Due to this package not having shared libraries.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-client-version-inventory-script/debian-master/control
+++ b/recipes/mender-client-version-inventory-script/debian-master/control
@@ -7,7 +7,7 @@ Build-Depends-Indep: debhelper (>= 10), jq, git
 
 Package: mender-client-version-inventory-script
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, mender-update
+Depends: ${misc:Depends}, mender-update
 Description: Mender client version inventory script
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
  mender-client-version-inventory-script provides an inventory script with the
