ci: Submit more test results to Mantra
Ticket: QA-1341

Signed-off-by: Paweł Poławski <pawel.polawski@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,9 @@ include:
     file: '.gitlab-ci-check-python3-format.yml'
   - project: 'Northern.tech/Mender/mendertesting'
     file: '.gitlab-ci-github-status-updates.yml'
+  - project: "Northern.tech/Mender/mendertesting"
+    file: "qa-common/send-results-to-mantra.yml"
+    ref: "master"
 
 # NOTE: To add distributions, modify first the matrix in mender-test-containers repository
 .mender-dist-packages-image-matrix-cross:
@@ -403,6 +406,9 @@ test:check-python3-formatting:
       --mender-client-version-inventory-script-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-client-version-inventory-script-deb-version)
       ${commercial_tests_flags}
       --junit-xml results.xml
+  after_script:
+  - MANTRA_PROJECT_NAME: "full_integration"
+  - !reference [.mantra-push-results]
   artifacts:
     reports:
       junit: tests/results.xml
@@ -455,6 +461,9 @@ test:pkgs:device-components:trixie:
   script:
     - cd scripts/tests
     - python3 -m pytest -v --junit-xml results.xml test_install_mender_sh.py
+  after_script:
+  - MANTRA_PROJECT_NAME: "full_integration"
+  - !reference [.mantra-push-results]
   artifacts:
     reports:
       junit: scripts/tests/results.xml
@@ -487,6 +496,9 @@ test:install-script:legacy:
   script:
     - cd scripts/tests
     - python3 -m pytest -v --junit-xml results.xml test_install_mender_sh_legacy.py
+  after_script:
+  - MANTRA_PROJECT_NAME: "full_integration"
+  - !reference [.mantra-push-results]
   variables:
     DEBIAN_VERSION: 11
     DEBIAN_VERSION_NAME: "bullseye"
